[package]
name = "pi-async-rt"
version = "0.2.19"
authors = ["vmos <vmosone007@gmail.com>"]
edition = "2018"
description = "Based on future (MVP), a universal asynchronous runtime and tool used to provide a foundation for the outside world"
repository = "https://github.com/pi-revolution/pi-async-rt.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async"]

[features]
serial = []

[dependencies]
libc = "0.2"
futures = "0.3"
async-stream = "0.3"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
st3 = "0.4"
flume = "0.11"
pi_hash = "0.1"
parking_lot = "0.12"
rand = { version = "0.9", features = ["std", "std_rng"] }
num_cpus = "1.16"
backtrace = "0.3"
slotmap = { version = "0.2", package = "pi_slotmap" }
quanta = "0.12"
wrr = { package = "pi_wrr",  version = "0.1.1"}
log = "0.4"
pi_cancel_timer = "0.3"
pi_timer = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
polling = "3.11"

[dev-dependencies]
futures-util = "0.3"

async-stream = "0.3"
async-lock = "3.4"
twox-hash = "2.1"
dashmap = "6.1"
env_logger = "0.11"
lazy_static = "1.4"
spin_mutex = { version = "0.10", package = "spin" }
async-std = "1.12"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.44", features = ["full"] }
